agent/agent.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agentic
---
apiVersion: v1
kind: Service
metadata:
  name: agentic-sre-agent
  namespace: agentic
spec:
  selector:
    app: agentic-sre-agent
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agentic-sre-agent
  namespace: agentic
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agentic-sre-agent
  template:
    metadata:
      labels:
        app: agentic-sre-agent
    spec:
      serviceAccountName: agentic-sre-agent
      containers:
        - name: agent
          image: us-central1-docker.pkg.dev/buoyant-episode-386713/sre-agent/sre-agent:v0.1.2
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 5
